# Geometrical_figures_lab_12

./: 2021-2022-2сем-task-01-Inheritance.docx  CMakeLists.txt  main.cpp
src/: Enum.cpp  Enum.h
src/data_access_layer/: AbstractReaderWriter.h  ReaderWriterJson.cpp  ReaderWriterJson.h  ReaderWriterTxt.cpp  ReaderWriterTxt.h
src/entity/: Annulus.cpp  Annulus.h  Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  Point.cpp  Point.h  Shape.cpp  Shape.h  Shape2d.cpp  Shape2d.h  Shape3d.cpp  Shape3d.h  Sorter.h  Tor.cpp  Tor.h  cone.cpp  cone.h
tests/: test.txt  tests.json  testsout.json  testsout.txt
